# cmake_example

./: CMakeLists.txt  env.mk
src/: main.c
